--- a/look-me-up/src/components/SearchResult.scss
+++ b/look-me-up/src/components/SearchResult.scss
@@ -9,6 +9,7 @@ $hover: #686efa;
   padding-left: 10px;
   margin-left: 13%;
   margin-right: 13%;
+  margin-top: 4px;
   max-width: 100vw !important;
   height:120px;
   transition: all 0.15s linear;
